Fall back to kernel locking implementation if remote site incapable
The fallback is not done when -o delay_connect is given, so mention
this limitation in the manual page.

--- a/sshfs.1.in
+++ b/sshfs.1.in
@@ -50,7 +50,8 @@ equivalent to '\-o ssh_protocol=1'
 reconnect to server
 .TP
 \fB\-o\fR delay_connect
-delay connection to server
+delay connection to server. Always forward file locking requests to server
+instead of probing if the server supports flock extension.
 .TP
 \fB\-o\fR sshfs_sync
 synchronous writes
